--- a/css/styles.css
+++ b/css/styles.css
@@ -198,12 +198,13 @@ ul {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   cursor: pointer;
-  font-family: inherit;
   padding: 10px 32px;
 
+  font-family: inherit;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
+
   display: flex;
   margin-left: auto;
   margin-right: auto;
@@ -264,6 +265,10 @@ ul {
   transition-delay: 0;
 
   background-color: #fff;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .modal-button {
@@ -282,6 +287,79 @@ ul {
   font-size: 22px;
 
   cursor: pointer;
+}
+
+/* Modal content */
+.form {
+  width: 100%;
+  margin-left: 40px;
+  margin-right: 40px;
+}
+
+.form-title {
+  margin-top: 40px;
+  margin-bottom: 30px;
+
+  color: var(--primary-text-color);
+
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
+.form-field {
+  display: block;
+  position: relative;
+  margin-bottom: 28px;
+}
+
+.form-field:nth-last-child() {
+  margin-bottom: 0px;
+}
+.form-field:focus-within > .form-icon {
+  background-color: var(--title-accent-color);
+}
+
+.form-label {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  transform: translateY(-100%);
+
+  color: var(--paragrapg-contacts-color);
+
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+}
+
+.form-input {
+  width: 100%;
+  height: 40px;
+  padding-left: 42px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+.form-icon {
+  position: absolute;
+  top: 50%;
+  left: 15px;
+
+  transform: translateY(-50%);
+  display: inline-block;
+
+  width: 12px;
+  height: 12px;
+  background-color: tomato;
+}
+
+.form-agreement {
 }
 
 /* Headings */
