--- a/css/styles.css
+++ b/css/styles.css
@@ -525,9 +525,10 @@ textarea {
   align-items: center;
 
   background-color: rgba(47, 48, 58, 0.8);
+}
 
+.work-actions-content {
   color: var(--hero-accent-color);
-  text-decoration: none;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -971,19 +972,10 @@ textarea {
   margin-bottom: 0;
 }
 /* Footer icon */
-.footer-heading {
-  margin-bottom: 20px;
-  text-decoration: none;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--hero-accent-color);
-}
 
 .footer-list {
   display: flex;
+  margin-top: 20px;
 }
 .footer-social-item {
   display: flex;
@@ -1031,22 +1023,31 @@ textarea {
 }
 
 .footer-form {
-  display: flex;
   margin-left: 93px;
-}
-
-.subscribe-title {
 }
 
 .footer-subscribe {
 }
 
 .subscribe-input {
-  width: 100%;
-  height: 50px;
-}
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 16px;
 
-.subscribe-email {
+  width: 358px;
+  height: 50px;
+
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  background-color: transparent;
+
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: var(--hero-accent-color);
 }
 
 .subscribe-button {
@@ -1071,11 +1072,17 @@ textarea {
 
   display: flex;
   letter-spacing: 0.06em;
+  height: 50px;
 
   transition-property: color, background-color, box-shadow;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-delay: 0;
+
+  background-image: url(../img/paperplane.svg);
+  background-position: 150px 13px;
+  background-repeat: no-repeat;
+  background-size: scale-down;
 }
 
 .subscribe-button:hover,
