--- a/css/styles.css
+++ b/css/styles.css
@@ -269,18 +269,12 @@ textarea {
   transition-delay: 0;
 
   background-color: #fff;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .modal-button {
   position: absolute;
-  top: 0;
-  right: 0;
-  margin-top: 8px;
-  margin-right: 8px;
+  top: 8px;
+  right: 8px;
 
   width: 30px;
   height: 30px;
@@ -310,7 +304,7 @@ textarea {
 }
 
 .form-title {
-  margin-bottom: 30px;
+  margin-bottom: 12px;
 
   color: var(--primary-text-color);
 
@@ -324,7 +318,7 @@ textarea {
 .form-field {
   display: block;
   position: relative;
-  margin-bottom: 28px;
+  margin-bottom: 10px;
 
   cursor: pointer;
 }
@@ -348,11 +342,9 @@ textarea {
 }
 
 .form-label {
-  position: absolute;
-  top: 0;
-  left: 0;
+  display: block;
 
-  transform: translateY(-18px);
+  margin-bottom: 4px;
 
   color: var(--paragrapg-contacts-color);
 
@@ -384,10 +376,9 @@ textarea {
 
 .form-icon {
   position: absolute;
-  top: 50%;
-  left: 15px;
+  top: 48%;
+  left: 12px;
 
-  transform: translateY(-50%);
   display: inline-block;
 
   fill: var(--primary-text-color);
@@ -399,6 +390,8 @@ textarea {
 }
 
 .form-comment {
+  display: block;
+
   width: 100%;
   height: 120px;
   padding: 12px 16px;
@@ -420,9 +413,9 @@ textarea {
 }
 
 .form-agreement {
-  height: 24px;
-  position: absolute;
-  padding-left: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .form-checkbox {
@@ -433,15 +426,11 @@ textarea {
 }
 
 .checkbox-icon {
-  margin-left: -10px;
-  position: absolute;
-
-  left: 20px;
-  transform: translateY(15%);
-
   display: inline-block;
   width: 15px;
   height: 15px;
+
+  margin-right: 8px;
 
   border: 2px solid var(--primary-text-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -449,6 +438,19 @@ textarea {
   border-radius: 4px;
   background-image: var(--hero-accent-color);
 }
+.form-checkbox:checked + .checkbox-icon {
+  background-color: var(--title-accent-color);
+  background-image: url('../img/agreement.svg');
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-origin: border-box;
+
+  border: transparent;
+  border-radius: 2px;
+  box-shadow: none;
+}
+
 .form-checkbox:checked:focus + .checkbox-icon {
   background-color: var(--title-accent-color);
   background-image: url('../img/agreement.svg');
@@ -482,7 +484,7 @@ textarea {
   line-height: 1.87;
 
   display: flex;
-  margin-top: 80px;
+  margin-top: 30px;
   margin-left: auto;
   margin-right: auto;
   letter-spacing: 0.06em;
@@ -957,6 +959,10 @@ textarea {
   align-items: baseline;
 }
 
+.footer-address {
+  flex-grow: 1;
+}
+
 .footer-social {
   margin-left: 70px;
 }
@@ -1022,8 +1028,14 @@ textarea {
   height: 10px;
 }
 
-.footer-form {
+.footer-box {
   margin-left: 109px;
+}
+
+.footer-form {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
 }
 
 .subscribe-input {
@@ -1055,11 +1067,6 @@ textarea {
   border-radius: 4px;
   cursor: pointer;
 
-  padding-top: 10px;
-  padding-right: 62px;
-  padding-bottom: 10px;
-  padding-left: 30px;
-
   margin-left: 12px;
 
   font-family: inherit;
@@ -1068,18 +1075,17 @@ textarea {
   line-height: 1.87;
 
   display: flex;
+  justify-content: center;
+  align-items: center;
   letter-spacing: 0.06em;
+
   height: 50px;
+  width: 200px;
 
   transition-property: color, background-color, box-shadow;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-delay: 0;
-
-  background-image: url(../img/paperplane.svg);
-  background-position: 150px 13px;
-  background-repeat: no-repeat;
-  background-size: scale-down;
 }
 
 .subscribe-button:hover,
@@ -1087,4 +1093,10 @@ textarea {
   color: var(--hero-accent-color);
   background-color: var(--button-hover-hero);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.footer-form-icon {
+  margin-left: 10px;
+  width: 24px;
+  height: 24px;
 }
