--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,7 @@ textarea {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
 /* #212121 text main color */
 /* #2196F3 text accent and hover color */
 /* #757575 text paragraph and contacts color */
@@ -75,7 +76,7 @@ textarea {
   margin-left: auto;
 }
 
-/* brandname */
+/* logo */
 .logo {
   /* --new-accent: red: окремий акцент доступний тільки в 1 секції */
   color: var(--primary-text-color);
@@ -181,7 +182,7 @@ textarea {
     ),
     url(../img/background-hero.jpg);
 }
-.hero-title {
+.hero__title {
   margin-top: 0;
   margin-bottom: 40px;
 
@@ -192,7 +193,7 @@ textarea {
   letter-spacing: 0.06em;
   text-transform: uppercase;
 }
-.hero-button {
+.hero__button {
   background-color: var(--title-accent-color);
   color: var(--hero-accent-color);
   border-color: transparent;
@@ -217,8 +218,8 @@ textarea {
   transition-delay: 0;
 }
 
-.hero-button:hover,
-.hero-button:focus {
+.hero__button:hover,
+.hero__button:focus {
   color: var(--hero-accent-color);
   background-color: var(--button-hover-hero);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -268,7 +269,7 @@ textarea {
   background-color: #fff;
 }
 
-.modal-button {
+.modal__button {
   position: absolute;
   top: 8px;
   right: 8px;
@@ -289,8 +290,8 @@ textarea {
   transition-delay: 0;
 }
 
-.modal-button:hover,
-.modal-button:focus {
+.modal__button:hover,
+.modal__button:focus {
   color: var(--title-accent-color);
 }
 
@@ -300,7 +301,7 @@ textarea {
   padding: 40px;
 }
 
-.form-title {
+.form__title {
   margin-bottom: 12px;
 
   color: var(--primary-text-color);
@@ -312,7 +313,7 @@ textarea {
   letter-spacing: 0.03em;
 }
 
-.form-field {
+.form__label {
   display: block;
   position: relative;
   margin-bottom: 10px;
@@ -320,25 +321,25 @@ textarea {
   cursor: pointer;
 }
 
-.form-field:nth-last-child(3) {
+.form__label:nth-last-child(3) {
   margin-bottom: 20px;
 }
-.form-field:hover > .form-icon,
-.form-field:focus-within > .form-icon {
+.form__label:hover > .form__icon,
+.form__label:focus-within > .form__icon {
   fill: var(--title-accent-color);
 }
 
-.form-field:hover > .form-input,
-.form-field:focus-within > .form-input {
+.form__label:hover > .form__input,
+.form__label:focus-within > .form__input {
   border-color: var(--title-accent-color);
 }
 
-.form-field:hover > .form-comment,
-.form-field:focus-within > .form-comment {
+.form__label:hover > .form__comment,
+.form__label:focus-within > .form__comment {
   border-color: var(--title-accent-color);
 }
 
-.form-label {
+.form__name {
   display: block;
 
   margin-bottom: 4px;
@@ -351,7 +352,7 @@ textarea {
   letter-spacing: 0.01em;
 }
 
-.form-input {
+.form__input {
   width: 100%;
   height: 40px;
   padding-left: 42px;
@@ -371,7 +372,7 @@ textarea {
   transition-delay: 0;
 }
 
-.form-icon {
+.form__icon {
   position: absolute;
   top: 48%;
   left: 12px;
@@ -386,7 +387,7 @@ textarea {
   transition-delay: 0;
 }
 
-.form-comment {
+.form__comment {
   display: block;
 
   width: 100%;
@@ -409,20 +410,20 @@ textarea {
   transition-delay: 0;
 }
 
-.form-agreement {
+.form__agreement {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.form-checkbox {
+.form__checkbox {
   cursor: pointer;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
 }
 
-.checkbox-icon {
+.checkbox__icon {
   display: inline-block;
   width: 15px;
   height: 15px;
@@ -435,7 +436,7 @@ textarea {
   border-radius: 4px;
   background-image: var(--hero-accent-color);
 }
-.form-checkbox:checked + .checkbox-icon {
+.form__checkbox:checked + .checkbox__icon {
   background-color: var(--title-accent-color);
   background-image: url('../img/agreement.svg');
   background-position: center;
@@ -448,7 +449,7 @@ textarea {
   box-shadow: none;
 }
 
-.form-checkbox:checked:focus + .checkbox-icon {
+.form__checkbox:checked:focus + .checkbox__icon {
   background-color: var(--title-accent-color);
   background-image: url('../img/agreement.svg');
   background-position: center;
@@ -461,12 +462,12 @@ textarea {
   box-shadow: none;
 }
 
-.form-policy {
+.form__policy {
   text-decoration: underline solid var(--title-accent-color);
   color: var(--title-accent-color);
 }
 
-.form-button {
+.form__button {
   background-color: var(--title-accent-color);
   color: var(--hero-accent-color);
   border-color: transparent;
@@ -492,26 +493,85 @@ textarea {
   transition-delay: 0;
 }
 
-.form-button:hover,
-.form-button:focus {
+.form__button:hover,
+.form__button:focus {
   color: var(--hero-accent-color);
   background-color: var(--button-hover-hero);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
-/* Headings */
+/* section */
 .section {
   padding: var(--general-margin-bottom) 0;
 }
+
+/* features - Чем мы занимаемся */
+
+.feature-section__title {
+  margin-bottom: 10px;
+  color: var(--primary-text-color);
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+
+.feature-section__content {
+  color: var(--paragrapg-contacts-color);
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+.feature-section__box {
+  margin-bottom: 30px;
+  background: #f5f4fa;
+  border-radius: 4px;
+  width: 270px;
+  height: 120px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.feature-section__icon {
+  width: 70px;
+  height: 70px;
+}
+
+.feature-section__list {
+  display: flex;
+}
+.feature-section__list .feature-section__item + .feature-section__item {
+  margin-left: 30px;
+}
+
+/* Чем мы занимаемся(photos) */
+
 .work-section {
   padding-top: 0;
 }
-.work-thumb {
+
+.work-section__heading {
+  margin-bottom: 50px;
+
+  text-align: center;
+
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  letter-spacing: 0.03em;
+
+  color: var(--primary-text-color);
+}
+
+.work-section__thumb {
   position: relative;
   display: block;
 }
 
-.work-actions {
+.work-section__actions {
   display: flex;
   position: absolute;
   bottom: 0;
@@ -526,7 +586,7 @@ textarea {
   background-color: rgba(47, 48, 58, 0.8);
 }
 
-.work-actions-content {
+.work-section__content {
   color: var(--hero-accent-color);
   font-weight: 700;
   font-size: 14px;
@@ -535,18 +595,17 @@ textarea {
   text-transform: uppercase;
 }
 
-.section-title {
-  margin-bottom: 10px;
-  color: var(--primary-text-color);
-  text-decoration: none;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
+/* section Наша команда */
+
+.team-section {
+  background-color: var(--team-section-background);
 }
 
-.section-heading {
+.team-section__list {
+  display: flex;
+}
+
+.team-section__heading {
   margin-bottom: var(--common-margin-gap);
   color: var(--primary-text-color);
   text-decoration: none;
@@ -556,81 +615,61 @@ textarea {
   text-align: center;
   letter-spacing: 0.03em;
 }
-/* paragraphs */
-.section-content {
-  color: var(--paragrapg-contacts-color);
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-}
 
-/* features - Чем мы занимаемся */
-.feature {
-  margin-bottom: 30px;
-  background: #f5f4fa;
-  border-radius: 4px;
-  width: 270px;
-  height: 120px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.feature-icon {
-  width: 70px;
-  height: 70px;
-}
-
-.feature-list {
-  display: flex;
-}
-.feature-list .feature-item + .feature-item {
-  margin-left: 30px;
-}
-
-/* section Наша команда */
-.team {
-  display: flex;
-}
-.team-section {
-  background-color: var(--team-section-background);
-}
-.team-item {
+.team-section__item {
   background-color: var(--hero-accent-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   width: 270px;
 }
-.team .team-item + .team-item {
+.team-section__list .team-section__item + .team-section__item {
   margin-left: 30px;
 }
-.team-footer {
+.team-section__footer {
   padding: 30px 0;
   text-align: center;
 }
 
-.social-list {
+.team-section__name {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
+}
+
+.team-section__position {
+  margin-top: 10px;
+
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+  color: var(--paragrapg-contacts-color);
+}
+
+.social-media__list {
   display: flex;
   justify-content: center;
   margin-top: 15px;
 }
 
-.social-item {
+.social-media__item {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.social-list > .social-item {
+.social-media__list > .social-media__item {
   margin-right: 10px;
 }
 
-.social-list > .social-item:last-child {
+.social-media__list > .social-media__item:last-child {
   margin-right: 0;
 }
 
-.social-link {
+.social-media__link {
   color: var(--patron-customers-color);
   display: flex;
   justify-content: center;
@@ -649,47 +688,64 @@ textarea {
   transition-delay: 0;
 }
 
-.social-icon {
+.social-media__icon {
   fill: currentColor;
   width: 20px;
   height: 20px;
 }
 
-.social-link:hover,
-.social-link:focus {
+.social-media__link:hover,
+.social-media__link:focus {
   color: var(--hero-accent-color);
   background-color: var(--title-accent-color);
 }
 
 /* Patron customers */
-.client-list {
+
+.patron-section {
+}
+
+.patron-section__heading {
+  margin-bottom: 50px;
+
+  text-align: center;
+
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  letter-spacing: 0.03em;
+
+  color: var(--primary-text-color);
+}
+
+.patron-section__list {
   display: flex;
 }
 
-.client-item {
+.patron-section__item {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.client-list > .client-item {
+.patron-section__list > .patron-section__item {
   margin-right: 30px;
 }
 
-.client-list > .client-item:last-child {
+.patron-section__list > .patron-section__item:last-child {
   margin-right: 0;
 }
 
-.client-order {
+.patron-section__picture {
   padding: 16px 32px;
 }
 
-.client-icon {
+.patron-section__icon {
   width: 106px;
   height: 60px;
 }
 
-.client-link {
+.patron-section__link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -707,8 +763,8 @@ textarea {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-delay: 0;
 }
-.client-link:hover,
-.client-link:focus {
+.patron-section__link:hover,
+.patron-section__link:focus {
   fill: var(--title-accent-color);
   color: var(--title-accent-color);
   border-color: var(--title-accent-color);
@@ -753,8 +809,23 @@ textarea {
   fill: currentColor;
 }
 
-/* Navigation-buttons */
-.buttons {
+/* Navigation-portfolio-navigation__button */
+
+.portfolio-navigation__list {
+  display: flex;
+  justify-content: center;
+
+  margin-bottom: var(--common-margin-gap);
+}
+
+.portfolio-navigation__list > .portfolio-navigation__item:last-child {
+  margin-right: 0;
+}
+.portfolio-navigation__list .portfolio-navigation__item {
+  margin-right: 8px;
+}
+
+.portfolio-navigation__button {
   cursor: pointer;
   background-color: var(--team-section-background);
   color: var(--primary-text-color);
@@ -773,26 +844,12 @@ textarea {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-delay: 0;
 }
-.buttons:hover,
-.buttons:focus {
+.portfolio-navigation__button:hover,
+.portfolio-navigation__button:focus {
   color: var(--hero-accent-color);
   background-color: var(--title-accent-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
-.button-row {
-  display: flex;
-  justify-content: center;
-
-  margin-bottom: var(--common-margin-gap);
-}
-
-.button-row > .button:last-child {
-  margin-right: 0;
-}
-.button-row .button {
-  margin-right: 8px;
 }
 
 /* cards */
@@ -980,7 +1037,14 @@ textarea {
 }
 
 /* Footer icon */
-
+.footer-social__title {
+  color: var(--hero-accent-color);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
 .footer-social__list {
   display: flex;
   margin-top: 20px;
@@ -1030,17 +1094,26 @@ textarea {
   height: 10px;
 }
 
-.footer-box {
+.footer-form {
   margin-left: 109px;
 }
 
-.footer-form {
+.footer-form__title {
+  color: var(--hero-accent-color);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+
+.footer-form__subscribe {
   display: flex;
   justify-content: center;
   margin-top: 20px;
 }
 
-.subscribe-input {
+.footer-form__input {
   padding-top: 15px;
   padding-bottom: 15px;
   padding-left: 16px;
@@ -1061,7 +1134,7 @@ textarea {
   color: var(--hero-accent-color);
 }
 
-.subscribe-button {
+.footer-form__button {
   background-color: var(--title-accent-color);
   color: var(--hero-accent-color);
   border-color: transparent;
@@ -1090,14 +1163,14 @@ textarea {
   transition-delay: 0;
 }
 
-.subscribe-button:hover,
-.subscribe-button:focus {
+.footer-form__button:hover,
+.footer-form__button:focus {
   color: var(--hero-accent-color);
   background-color: var(--button-hover-hero);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
-.footer-form-icon {
+.footer-form__icon {
   margin-left: 10px;
   width: 24px;
   height: 24px;
