--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --primary-text-color: #212121;
   --title-accent-color: #2196f3;
   --button-hover-hero: #188ce8;
@@ -12,9 +12,9 @@
   --card-set-gap: 15px;
   --common-margin-gap: 50px;
   --card-border: #eeeeee;
-}
+} */
 
-body {
+/* body {
   color: var(--primary-text-color);
   background-color: var(--hero-accent-color);
   font-family: Roboto, sans-serif;
@@ -44,10 +44,11 @@ ul {
 textarea {
   resize: none;
 }
+*/
 
 /* hidden headings */
 
-.visually-hidden {
+/* .visually-hidden {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -58,7 +59,7 @@ textarea {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
-}
+} */
 
 /* #212121 text main color */
 /* #2196F3 text accent and hover color */
@@ -69,16 +70,16 @@ textarea {
 
 /* Container */
 
-.container {
+/* .container {
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin-right: auto;
   margin-left: auto;
-}
+} */
 
 /* logo */
-.logo {
+/* .logo {
   /* --new-accent: red: окремий акцент доступний тільки в 1 секції */
   color: var(--primary-text-color);
   text-decoration: none;
@@ -86,26 +87,26 @@ textarea {
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
-}
-.page-header__logo {
-  color: var(--title-accent-color);
-}
+} */
 
+/* .page-header__logo {
+  color: var(--title-accent-color);
+} */
 /* header */
-.page-header {
+/* .page-header {
   border-bottom: 1px solid #ececec;
 }
 .page-header__container {
   display: flex;
   align-items: center;
-}
+} */
 
 /* navigation */
-.navigation {
+/* .navigation {
   display: flex;
 }
 
-.header-navigation {
+.navigation-header {
   margin-left: 93px;
 }
 
@@ -121,7 +122,7 @@ textarea {
 }
 
 /* site-nav */
-.navigation__list {
+/* .navigation__list {
   display: flex;
 }
 .navigation__item {
@@ -167,10 +168,10 @@ textarea {
 
   background-color: var(--title-accent-color);
   border-radius: 2px;
-}
+} */ */
 
 /* hero */
-.hero {
+/* .hero {
   background-color: var(--hero-background-color);
   color: var(--hero-accent-color);
   padding: 200px 0;
@@ -228,10 +229,10 @@ textarea {
   color: var(--hero-accent-color);
   background-color: var(--button-hover-hero);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-}
+} */
 
 /* Modal window */
-.backdrop {
+/* .backdrop {
   position: fixed;
   top: 0;
   left: 0;
@@ -297,7 +298,7 @@ textarea {
 .modal__button:hover,
 .modal__button:focus {
   color: var(--title-accent-color);
-}
+} */
 
 /* Modal content */
 .form {
