--- a/sass/components/form/_modal.scss
+++ b/sass/components/form/_modal.scss
@@ -1,3 +1,5 @@
+@import ".../utils/animation";
+
 .backdrop {
     position: fixed;
     top: 0;
@@ -9,10 +11,7 @@
     background-color: rgba(0, 0, 0, 0.2);
     z-index: 2;
 
-    transition-property: opacity;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    transition-delay: 0;
+    @include transition-property(opacity);
 }
 
 .backdrop.is-hidden {
@@ -32,10 +31,8 @@
     width: 530px;
 
     transform: translate(-50%, -50%) scale(1);
-    transition-property: transform;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    transition-delay: 0;
+    
+    @include transition-property(transform);
 
     background-color: #fff;
 }
@@ -55,10 +52,7 @@
 
     cursor: pointer;
 
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    transition-delay: 0;
+    @include transition-property(color);
 }
 
 .modal__button:hover,
