--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,5 +1,4 @@
 @import "../utils/button-placeholder";
-@import "../utils/animation";
 
 .hero {
     background-color: var(--hero-background-color);
@@ -30,8 +29,16 @@
 }
 
 .hero__button {
+    
+    padding: 10px 32px;
     @extend %button;
-    @extend %animation;
+
+    transition-property: color,
+    background-color,
+    box-shadow;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-delay: 0;
 
     &:hover,
     &:focus {
