--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -7,11 +7,17 @@ h6,
 p {
     margin: 0;
 }
+
 ul {
     list-style: none;
     padding: 0;
     margin: 0;
 }
+
 textarea {
     resize: none;
+}
+
+.section {
+    padding: var(--general-margin-bottom) 0;
 }
