--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -1,4 +1,5 @@
-@import "../utils/navigation__link-placeholder";
+@import "../utils/navigation-placeholder";
+@import "../utils/animations";
 
 .navigation {
     display: flex;
@@ -16,9 +17,7 @@
     margin-right: var(--common-margin-gap);
 
     transition-property: fill, color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    transition-delay: 0;
+    @extend %animation;
 
     &:hover {
         fill: var(--title-accent-color);
@@ -31,28 +30,27 @@
 }
 
 .navigation__link {
-    @extend %navigation__link;
-
+    @extend %navigation-link;
+    
     &:hover,
     &:focus {
         color: var(--title-accent-color);
     }
-    
+
     &--active {
         color: var(--title-accent-color);
     }
-    
+
     &--active::after {
         content: '';
-    
+
         display: block;
         position: absolute;
         bottom: 0;
         width: 100%;
         height: 4px;
-    
+
         background-color: var(--title-accent-color);
         border-radius: 2px;
     }
 }
-
