--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,4 @@
-@import "./variables/variables";
+@import "./utils/variables";
 @import "./base/base";
 @import "./base/reset";
 @import "./utils/visually-hidden";
